--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 sudo: required
+language: generic
+
 services:
   - docker
 
@@ -6,4 +8,4 @@ before_install:
   - docker build -t gamberri/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run gamberri/docker-react npm run test
+  - docker run -e CI=true gamberri/docker-react npm run test
