--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,16 @@ before_install:
   - docker build -t gamberri/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI-true gamberri/docker-react npm run test -- --coverage
+  - docker run -e CI-true gamberri/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "frontent"
+  env: "Frontent-env"
+  bucket_name: "elasticbeanstalk-us-east-1-047719659825"
+  bucket_path: "frontent"
+  on:
+    branch: main
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:  "$AWS_SECRET_KEY"
